(fix) Overflow of code block element

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -113,7 +113,19 @@ body {
         }
 
         pre {
-          background-color: var(--background-secondary);
+          color: var(--text);
+          background-color: var(--background-tertiary);
+          font-family: Consolas, Courier New, monospace;
+          font-feature-settings: normal;
+          text-align: left;
+          white-space: pre;
+          word-break: normal;
+          word-wrap: normal;
+          -moz-tab-size: 4;
+          -o-tab-size: 4;
+          tab-size: 4;
+          overflow: auto;
+          padding: 1.3125rem;
         }
       }
     }
